--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
+  "homepage": "https://isahsantos.github.io/mvp-front-avancado-git-list",
   "name": "mvp-git-list-puc-rio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://isahsantos.github.io/mvp-front-avancado-git-list",
-
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build" , 
+    "deploy": "gh-pages -d dist" ,
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
+  
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
